[package]
name = "safe_backup"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
simplelog = "0.12"

# (Optional) for robust path handling
path-clean = "1.0.1"
assert_cmd = "2.0"
predicates = "3.1.3"
tempfile = "3.3"